# LiveJurnalbot

./: .gitignore  dockerfile  main.py  pyproject.toml
src/bot/: run.py  utils.py
src/bot/constants/: __init__.py  commands_text.py  conversation_states.py  user_data_keys.py
src/bot/handlers/: __init__.py  base.py  menu.py  parametrs.py  records.py  reminder_strategies.py  scenarios.py
src/bot/hendlers/: __init__.py  base.py  commands.py  menu.py  parametrs.py  records.py  reminder_strategies.py  scenarios.py
src/bot/keyboards/: parametrs.py  scenarios.py
src/db/: models.py  repository.py
src/templates/: env.py
static/templates/: ask_scenario_name.txt  scenarios_list.txt
